styles friend requests and other

--- a/style.css
+++ b/style.css
@@ -427,6 +427,8 @@ main .container .right{
     bottom: 0;
 }
 
+/* messages */
+
 .right .messages{
     background: var(--color-white);
     border-radius: var(--card-border-radius);
@@ -480,8 +482,12 @@ main .container .right{
 
 .right .message .profile-photo {
     position: relative;
+    overflow: visible;
 }
 
+.right .profile-photo img {
+    border-radius: 50%;
+}
 
 .right .messages .message:last-child{
     margin: 0;
@@ -500,4 +506,35 @@ main .container .right{
     position: absolute;
     bottom: 0;
     right: 0;
+}
+
+/* end messages */
+
+/* friend requests */
+
+.right .friend-requests{
+    margin-top: 1rem;
+}
+
+.right .friend-requests h4{
+    color: var(--color-gray);
+    margin: 1rem 0;
+}
+
+.right .request{
+    background: var(--color-white);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    margin-bottom: 0.7rem;
+}
+
+.right .request .info{
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.right .request .action{
+    display: flex;
+    gap: 1rem;
 }
